--- a/src/theme/variables.scss
+++ b/src/theme/variables.scss
@@ -60,8 +60,8 @@
 
   --ion-color-success: #b4e3b5;
   --ion-color-success-rgb: 180,227,181;
-  --ion-color-success-contrast: var(--ion-text-color);
-  --ion-color-success-contrast-rgb: var(--ion-text-color-rgb);
+  --ion-color-success-contrast: #637b63;
+  --ion-color-success-contrast-rgb: 99, 123, 99;
   --ion-color-success-shade: #9ec89f;
   --ion-color-success-tint: #bce6bc;
 
