Critterpedia details page

--- a/src/app/pages/about/about.page.html
+++ b/src/app/pages/about/about.page.html
@@ -19,7 +19,7 @@
       </ion-item>
       <ion-item>
         <ion-label class="ion-text-wrap">
-          Chore icons are made by Nintendo™
+          Chore and Critterpedia icons are made by Nintendo™
         </ion-label>
       </ion-item>
       <ion-item>
