Import villagers and set the ones in the Island

--- a/src/app/pages/island/island.page.html
+++ b/src/app/pages/island/island.page.html
@@ -72,5 +72,5 @@
 </ion-content>
 
 <app-slide-drawer title="Island Villagers">
-  <p>ion-avatars of the villagers, plus a search box that allows me to select them</p>
+  <app-villagers></app-villagers>
 </app-slide-drawer>
