Add loading indicators for stuff + a way to clear data

--- a/src/app/components/villagers/villagers.component.html
+++ b/src/app/components/villagers/villagers.component.html
@@ -2,7 +2,11 @@
   <div class="villagers-container">
     <ion-searchbar animated mode="ios" [(ngModel)]="searchFilter" (ionChange)="applySearchFilter()"></ion-searchbar>
     <div class="villagers-list-container fade-in" *ngIf="!isSearching">
-      <div class="empty-state" *ngIf="caughtVillagers.length === 0">
+      <div class="empty-state" *ngIf="!finishedImporting">
+        <ion-progress-bar type="indeterminate"></ion-progress-bar>
+        The Villagers are still being imported by Pocket Companion! Come back again in a couple minutes.
+      </div>
+      <div class="empty-state" *ngIf="finishedImporting && caughtVillagers.length === 0">
         There are no Villagers registered in your island right now. Try searching for them with the search bar above!
       </div>
       <div class="villager caught" *ngFor="let villager of caughtVillagers" (click)="toggleCaught($event, villager)">
