--- a/src/app/pages/home/home.page.html
+++ b/src/app/pages/home/home.page.html
@@ -49,5 +49,6 @@
       </ion-grid>
     </div>
     <a class="about-link" [routerLink]="['/about']">About this app</a>
+    <a class="clear-data" (click)="clearData()">Clear Data</a>
   </div>
 </ion-content>
