--- a/src/app/pages/home/home.page.scss
+++ b/src/app/pages/home/home.page.scss
@@ -50,6 +50,13 @@ h1 {
 .about-link {
   color: var(--ion-text-color);
   position: absolute;
-  bottom: 25px;
+  bottom: 55px;
+  text-decoration: none;
+}
+
+.clear-data {
+  color: rgba(var(--ion-color-danger-rgb), 0.5);
+  position: absolute;
+  bottom: 15px;
   text-decoration: none;
 }
