--- a/src/app/pages/critterpedia/critterpedia.page.html
+++ b/src/app/pages/critterpedia/critterpedia.page.html
@@ -22,7 +22,7 @@
     <div class="segment" *ngIf="activeSegment === 'bugs'">
       <div class="empty-state" *ngIf="!finishedImportingBugs">
         <ion-progress-bar type="indeterminate"></ion-progress-bar>
-        The Bugs are still being imported by Pocket Companion! Come back again in a couple minutes.
+        The Bugs are still being imported by Pocket Companion! Just wait a bit longer.
       </div>
       <ion-virtual-scroll [items]="bugs" approxItemHeight="56px">
         <ion-item *virtualItem="let bug" detail (click)="openDetails(bug)">
@@ -45,7 +45,7 @@
     <div class="segment" *ngIf="activeSegment === 'fishes'">
       <div class="empty-state" *ngIf="!finishedImportingFishes">
         <ion-progress-bar type="indeterminate"></ion-progress-bar>
-        The Fishes are still being imported by Pocket Companion! Come back again in a couple minutes.
+        The Fishes are still being imported by Pocket Companion! Just wait a bit longer.
       </div>
       <ion-virtual-scroll [items]="fishes" approxItemHeight="56px">
         <ion-item *virtualItem="let fish" detail (click)="openDetails(fish)">
@@ -68,7 +68,7 @@
     <div class="segment" *ngIf="activeSegment === 'sea-creatures'">
       <div class="empty-state" *ngIf="!finishedImportingSeaCreatures">
         <ion-progress-bar type="indeterminate"></ion-progress-bar>
-        The Sea Creatures are still being imported by Pocket Companion! Come back again in a couple minutes.
+        The Sea Creatures are still being imported by Pocket Companion! Just wait a bit longer.
       </div>
       <ion-virtual-scroll [items]="seaCreatures" approxItemHeight="56px">
         <ion-item *virtualItem="let creature" detail (click)="openDetails(creature)">
@@ -91,7 +91,7 @@
     <div class="segment" *ngIf="activeSegment === 'fossils'">
       <div class="empty-state" *ngIf="!finishedImportingFossils">
         <ion-progress-bar type="indeterminate"></ion-progress-bar>
-        The Fossils are still being imported by Pocket Companion! Come back again in a couple minutes.
+        The Fossils are still being imported by Pocket Companion! Just wait a bit longer.
       </div>
       <ion-virtual-scroll [items]="fossils" approxItemHeight="56px">
         <ion-item *virtualItem="let fossil" detail (click)="openDetails(fossil)">
