--- a/src/app/pages/welcome/welcome.page.html
+++ b/src/app/pages/welcome/welcome.page.html
@@ -23,7 +23,7 @@
       <ion-button class="btn-next" (click)="saveAndNext(3)" [disabled]="!island.residentRepresentative.name">Next</ion-button>
     </ion-slide>
     <ion-slide class="slide-3">
-      <ion-img src="assets/icons/island.png"></ion-img>
+      <ion-img src="assets/icons/island.svg"></ion-img>
       <h1>Now, tell a bit about your island</h1>
       <ion-item>
         <ion-label position="fixed">Island Name</ion-label>
@@ -52,7 +52,7 @@
       <ion-button class="btn-next" (click)="saveAndNext(4)" [disabled]="!island.name || !island.hemisphere || !island.fruit">Next</ion-button>
     </ion-slide>
     <ion-slide class="slide-4">
-      <ion-img src="assets/icons/todo.png"></ion-img>
+      <ion-img src="assets/icons/todo.svg"></ion-img>
       <h1>All set!</h1>
       <p>
         We have all we need to start using the app. Let's go!
