--- a/src/theme/variables.scss
+++ b/src/theme/variables.scss
@@ -127,6 +127,20 @@
   --ion-color-chores-contrast-rgb: var(--ion-text-color-rgb);
   --ion-color-chores-shade: #e0b697;
   --ion-color-chores-tint: #fed4b4;
+
+  --ion-color-available: #c5d7f2;
+  --ion-color-available-rgb: 197,215,242;
+  --ion-color-available-contrast: #000000;
+  --ion-color-available-contrast-rgb: 0,0,0;
+  --ion-color-available-shade: #adbdd5;
+  --ion-color-available-tint: #cbdbf3;
+
+  --ion-color-settings: #cad9e2;
+  --ion-color-settings-rgb: 202,217,226;
+  --ion-color-settings-contrast: #000000;
+  --ion-color-settings-contrast-rgb: 0,0,0;
+  --ion-color-settings-shade: #b2bfc7;
+  --ion-color-settings-tint: #cfdde5;
 }
 
 .ion-color-island {
